add /api/v2/leagues/{:id}
