# src/v2/routes/leagues.route.js
@@ -13,4 +13,12 @@ router.get('/', validateReq, async (req, res, next) => {
     }
 });
 
+router.get('/:id', validateReq, async (req, res, next) => {
+    try {
+        res.status(200).send(await leaguesService.getLeague(req.params.id));
+    } catch(err) {
+        next(err);
+    }
+});
+
 module.exports = router;
